<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".first_activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"

        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/converter_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="210dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/contract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_style"
        android:hint="@string/enter_login"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_style"

        android:hint="Введите пароль"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:background="@drawable/button_enter_style"
        android:text="@string/start"
        android:textSize="18dp"
        android:textStyle="bold"

        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>